--- a/main_app/templates/main_app/base.html
+++ b/main_app/templates/main_app/base.html
@@ -1,17 +1,25 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Enter URL</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  {% block head %}
+  {% endblock %}
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  {% block style %}
+  {% endblock %}
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-  {% block content %}{% endblock %}
-  <h1> Enter your URL </h1>
-    <form method="POST">
-      {% csrf_token %}
-        {{ form }}
-        <button type="submit"> Submit </button>
-    </form>
+{% block content %}
+{% endblock %}
+
+{% block script %}
+{% endblock %}
 </body>
 </html>
